--- a/Stop.tex
+++ b/Stop.tex
@@ -267,6 +267,20 @@ The sensitivity of the analysis for top squark searches based on the baseline re
   \label{fig:stop_top_channels}
 \end{figure} 
 In order to address the specific kinematics of the various background contributions, first the background composition is studied. In Fig.~\ref{fig:stop_top_channels} the background and signal processes are shown according to the decay mode of the process after the application of the baseline selection (left) and the baseline selection with an additional requirement of $\ge 1$ CMS Top Tag (right). These channels are defined according to the top quark properties based on generator information. The first channel includes all non-top backgrounds and the all-hadronic top decays. Channels two to four exhibit the semi-leptonic top decays which are involving electrons (channel two), muons (channel three) and tau leptons (channel four). The distributions exhibit that after the application of the top-tagging requirement the main background contribution arises from \ttbar events. Here, contributions from lost-leptons (channel two and three) and hadronically decaying tau leptons (channel four) occur in about equal amounts with slightly more hadronic tau events. Since in general the number of events is small after application of the top tag requirement, kinematic selections and their performance are investigated when applying baseline selection criteria. Nonetheless, since \ttbar is known to be the largest background after top tagging, special emphasis is put on reducing the \ttbar background contributions. \\
+\begin{figure}[!t]
+  \centering
+  % \makebox[\linewidth]{
+  \begin{minipage}[c]{1.\textwidth}
+    \begin{center}
+      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_AlphaT.pdf}  
+      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_MT2.pdf} \\
+      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_Razor_R.pdf}
+    \end{center}
+  \end{minipage}
+
+  \caption{Distribution of the $\alpha_T$ variable (\textit{top left}), $M_\mathrm{T2}$ (\textit{top right}) and  the razor variable $R^2$ (\textit{bottom}) after application of the baseline selection requirements for background and two selected signal samples. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+  \label{fig:stop_baseline_kin_vars}
+\end{figure}
 Several kinematic variables exist that have been successfully used already in various susy searches at $\sqrt{s} = 7$ and 8\tev:
 \begin{description}
  \item $\mathbf{\alpha_T:}$ The $\alpha_T$ variable is mainly used to reject QCD multijet events which have no intrinsic \met~\cite{Chatrchyan:2012wa, Chatrchyan:2013lya}. In case of dijet events, it is defined as:
@@ -286,7 +300,7 @@ with the two transverse masses ($i = 1, 2$)
 described by the transverse momenta $\vec{p}_\mathrm{T}^{\, \mathrm{vis}(i)}$, transverse energies $E_\mathrm{T}^{\mathrm{vis}(i)}$ and masses $m^{\mathrm{vis}(i)}$ for the visible systems and the unknown transverse momenta of the LSPs $\vec{p}_\mathrm{T}^{\tilde{\chi}(i)} $. Experimentally, the momenta $\vec{p}_\mathrm{T}^{\tilde{\chi}(i)}$ are not accessible separately. Thus, a minimization on trial LSP masses fulfilling the constraint given by $\vec{p}_\mathrm{T}^{\; \mathrm{miss}}$, the missing transverse momentum\footnote{More commonly denoted by \metvec in this thesis.} is performed. This minimization is carried out to make sure that $M_\mathrm{T2}$ does not exceed the mass of the parent particle. For the correct value of $m_{\tilde{\chi}}$, the distribution of $M_\mathrm{T2}$ is expected to have an endpoint at the mass of the parent particle. \\
 In this studies, the two visible systems are assumed to be described by the two leading CA8 jets in the event. The mass of the neutralinos is considered to be zero in the calculation of $M_\mathrm{T2}$. \\ 
 The obtained distributions for $M_\mathrm{T2}$ in background and signal samples are shown in Fig~\ref{fig:stop_baseline_kin_vars} (top right). They exhibit that the maximum of $M_\mathrm{T2}$ is higher for signal events than for background such that this variable is supposed to be well suited to distinguish signal and background events.  
- \item \textbf{Razor variables:} The kinematic razor variables are used to quantify the generic process of pair production of two heavy particles which subsequently decay into visible products usually represented by two (large) jets and an undetected particle~\cite{Chatrchyan:2012uea, Chatrchyan:2014goa, CMS-PAS-SUS-14-011}. These variables are used to test, if the two jets represent the visible part of the decay of two heavy objects. \\
+ \item \textbf{Razor variables:} The kinematic razor variables are used to quantify the generic process of pair production of two heavy particles which subsequently decay into visible products usually represented by (large) jets and undetected particles~\cite{Chatrchyan:2012uea, Chatrchyan:2014goa, CMS-PAS-SUS-14-011}. These variables are used to test, if the two jets represent the visible part of the decay of two heavy objects. \\
 The razor variables are defined as
 \begin{equation}
 M_\mathrm{R} = \sqrt{\left[(|\vec{p}^{\; j1} | + |\vec{p}^{\; j2} |)^2 - (p_z^{\; j1}  + p_z^{\; j2} )^2 \right]}
@@ -302,26 +316,38 @@ For these studies, the two leading CA8 jets and \met are used to compute the raz
 \end{description} 
 In addition to these variables, which are already well established in searches for supersymmetry, also other kinematic quantities can be considered
 \begin{description}
- \item \textbf{Transverse mass} $\mathbf{m_T}$ \textbf{:}
- \item $\mathbf{\Delta \phi(CA}$--$\mathbf{jet_1, CA}$--$\mathbf{jet_2)}$ \textbf{:}
+ \item \textbf{Transverse mass} $\mathbf{m_T}$ \textbf{:} As shown in Fig.~\ref{fig:stop_top_channels}, background contributions from \ttbar events arise predominantly from semi-leptonic top quark decays. In such decays the missing transverse energy is mainly arising from the leptonically decaying top quark. This is caused by neutrinos from the decay of the W boson and becomes even more prominent for lost-lepton events in which also the undetected lepton contributes to the missing energy. In both cases however, the missing energy is expected to point into the direction of the leptonic top decay which is supposed to be accompanied by a b-quark jet also stemming from the top decay. Thus, the missing transverse energy and the closest b-tagged jet in $\Delta \phi$ can be utilized to calculate a transverse mass according to
+\begin{equation}
+m_T = \sqrt{2 \pt^\mathrm{jet}\met \cdot (1-\mathrm{cos}(\Delta \phi(\mathrm{jet}, \met)))}
+\end{equation}   
+The distribution obtained after applying the baseline selection is shown for background and two selected signal samples in Fig.~\ref{fig:stop_baseline_kin_vars2} (left). Here, the transverse mass is calculated from the missing transverse momentum and the closest b-tagged anti-$k_\mathrm{T}$ jet with $R = 0.5$ as identified by the CSV algorithm with medium working point and transverse momentum greater than 30\gev. It is treated as zero in case no b-tagged jet could be identified. The distributions exhibit that this transverse mass variable has a peak in case of \ttbar events close to the top quark mass while it is relatively flat for signal events. 
+ \item $\mathbf{\Delta \phi(CA}$--$\mathbf{jet_1, CA}$--$\mathbf{jet_2)}$ \textbf{:} The selection of events with a back-to-back topology has been used in chapter~\ref{chap:Resolution} in order to identify dijet events by requiring $\Delta \phi > 2.7$. A similar situation can be expected to occur when having event topologies with boosted top quark decays in \ttbar events. For high transverse momenta a \ttbar event features a dijet-like structure of two fatjets balanced against each other. For signal events however, such a topology is not expected, since the event is balanced against genuine \met arising from the LSPs. The selected $\Delta \phi$ distributions after applying baseline selection criteria are shown in Fig.~\ref{fig:stop_baseline_kin_vars2} (right).  
 \end{description}
- 
 \begin{figure}[!t]
   \centering
-  % \makebox[\linewidth]{
-  \begin{minipage}[c]{1.\textwidth}
-    \begin{center}
-      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_AlphaT.pdf}  
-      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_MT2.pdf} \\
-      \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_Razor_R.pdf}
-    \end{center}
-  \end{minipage}
-
-  \caption{Distribution of the $\alpha_T$ variable (\textit{top left}), $M_\mathrm{T2}$ (\textit{top right}) and  the razor variable $R^2$ (\textit{bottom}) after application of the baseline selection requirements for background and two selected signal samples. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
-  \label{fig:stop_baseline_kin_vars}
+  \begin{tabular}{cc}
+                \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_transverseMass_MET_closestAndBTaggedJet.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_deltaPhi_topjet1_topjet2.pdf}
+  \end{tabular}
+  \caption{Distribution of the $m_T$ variable (\textit{left}) and $\mathbf{\Delta \phi(CA}$--$\mathbf{jet_1, CA}$--$\mathbf{jet_2)}$ (\textit{right}) after application of the baseline selection requirements for background and two selected signal samples. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass.}
+  \label{fig:stop_baseline_kin_vars2}
 \end{figure}
-
-
+In order to quantify the quality of these various kinematic selections, the separation power of the different variables is tested again by studying the background versus signal efficiency curves as introduced in Sec.~\ref{sec:stop_baseline}. The resulting distributions after applying baseline selection criteria are shown in Fig.~\ref{fig:stop_baseline_cutscan_kin_vars}. For comparison also the signal versus background efficiency curve for \met is illustrated. \\
+\begin{figure}[!t]
+  \centering
+\makebox[\linewidth]{
+  \begin{tabular}{cc}
+                \includegraphics[width=0.49\textwidth]{figures/CutScan_DeltaPhiSelection_total_Stop600_LSP50_T2tt_13TeV_MT2_AlphaT_Razor_TopjetDeltaPhi_MET.pdf} & 
+                \includegraphics[width=0.49\textwidth]{figures/CutScan_DeltaPhiSelection_TTbar_powheg_13TeV_Stop600_LSP50_T2tt_13TeV_MT2_AlphaT_Razor_TopjetDeltaPhi_MET.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/CutScan_DeltaPhiSelection_total_Stop1100_LSP50_T2tt_13TeV_MT2_AlphaT_Razor_TopjetDeltaPhi_MET.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/CutScan_DeltaPhiSelection_TTbar_powheg_13TeV_Stop1100_LSP50_T2tt_13TeV_MT2_AlphaT_Razor_TopjetDeltaPhi_MET.pdf}
+  \end{tabular}}
+  \caption{Evolution of the signal versus background efficiency for a stop mass of 600\gev (\textit{top}) and 1100\gev (\textit{bottom}) where the background is the sum of all backgrounds (\textit{left}) or the \ttbar background (\textit{right}).}
+  \label{fig:stop_baseline_cutscan_kin_vars}
+\end{figure}
+The calculation of $\alpha_T$, $\Delta \phi(\mathrm{CA}$--$\mathrm{jet}_1, \mathrm{CA}$--$\mathrm{jet}_2)$, $M_\mathrm{T2}$ and the razor variable $R^2$ imply that there exist two CA8 jets with \pt$> 150$\gev in the event. Consequently, the starting point of that scan curves is different than that of the \met curve which represents the signal and background efficiencies after the baseline selection. Similarly the curve for $m_T$ implies that each event has at least one b-tagged jet. For each event which does not possess a b-tagged jet, the transverse mass is considered as zero. The first point of the $m_T$ curve corresponds to a requirement of $m_T > 20$\gev.  \\
+The distributions exhibit that among the variables based on the presence of two CA8 jets $M_\mathrm{T2}$ performs best especially for high top squark masses. This statement applies to the total background as well as to the \ttbar background only. Furthermore, the selection based on $m_T$ shows a nice separation power as well but preferentially for smaller stop masses. It is visible that the curve for $m_T$ shows a distinct kink. This corresponds to a selection keeping only events with $m_T$ greater than the top quark mass. When imposing even tighter selection requirements on $m_T$, the separation power decreases rapidly. \\ 
+Consequently,  the sensitivity of the analysis is tested adding further selection criteria to the baseline requirements after the requirement of $\ge 1$ CMS top tag. In Fig.~\ref{fig:stop_baselinetoptag_limit} the expected exclusion limits are compared for various selections as function of the top squark mass for a LSP mass of 50\gev. Exclusion curves are derived based on the same exclusive search regions as defined in Tab.~\ref{tab:stop_excl_search_bins} considering the uncertainties for each background source as described in Sec.~\ref{sec:stop_baseline}. \\
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
@@ -330,6 +356,8 @@ In addition to these variables, which are already well established in searches f
   \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
   \label{fig:stop_baselinetoptag_limit}
 \end{figure}
+
+Here, different selections are compared. The exclusion curves derived from the baseline requirements is shown and indicates the sensitivity based on a very basic selection as discussed in Sec.~\ref{sec:stop_baseline}. Furthermore, the selection discussed in Sec.~\ref{sec:stop_btagging} in which at least one CMS top tag is reuqired in addition to the baseline selection is illustrated in light green. This selection can be easily combined with a b-tag requirement as discussed in Sec.~\ref{sec:stop_btagging} and is shown as dark green curve in Fig.~\ref{fig:stop_baselinetoptag_limit}. Hence, the combination of b-tagging and top tagging can further improve the search sensitivity. Finally, the baseline and top tagging selection is combined with a requirement of $m_T > 180$\gev which further reduces especially \ttbar background events. It turns out that the latter performs best among those described selections. 
 
 \section{Performance Comparison to Selection Based on Published Stop Analysis at $\sqrt{s} = 8$\tev}
 \label{sec:stop_pub}
